# RAG_Application_Practice

./: .env.example  1.0_RAG_With_Own_Text.ipynb  2.0_RAG_PDF.ipynb  3.0_RAG_Local_Persist.ipynb  4.0_RAG_Add_Docs.ipynb  README.md  pyproject.toml  requirments.txt
